tests/idris2/error/perror011/Issue1496-1.idr
module Main

export
Show Really where
  show (Really err) =  ["RR"

main : IO ()
main = putStrLn "LOG"
